--- a/socket-draw/package.json
+++ b/socket-draw/package.json
@@ -4,6 +4,7 @@
   "description": "```bash npm i -y ```",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
